Make lay lock the only soccer strategy
